# pzu

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  ruff.toml
pzu/: __init__.py
pzu/utils/: __init__.py  benchmark.py
pzu/wrappers/: __init__.py  record_video.py  record_video_parallel.py
tests/: test_benchmark.ipynb  test_rec_aec.ipynb  test_rec_parallel.ipynb
