[project]
name = "pzu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.2.2",
    "numpy>=2.3.5",
    "pettingzoo>=1.25.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "mpe2>=0.0.1",
    "setuptools>=80.9.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]