[project]
name = "pzu"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.2.2",
    "moviepy>=2.2.1",
    "numpy>=2.3.5",
    "pettingzoo>=1.25.0",
    "pre-commit>=4.5.0",
    "ruff>=0.14.7",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "loguru>=0.7.3",
    "mpe2>=0.0.1",
    "setuptools>=80.9.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
